src/test/deca/context/valid/provided/hello-world.deca
// Description:
//    Programme minimaliste utilisant println.
//
// Resultats:
//    Hello
//
// Historique:
//    cree le 21/04/2023

{
        println("Hello, world!");
}
