src/test/deca/context/invalid/provided/affect-incompatible.deca
// Description:
//    Affectation et typage
//
// Resultats:
//    Ligne 15: Affectation de types incompatibles.
// 
// Historique:
//    cree le 21/04/2023

{
   int a;
   boolean b;

   // Doit etre refuse.
   a = b;
}
